--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
     "description": "nuxt-ssr",
     "author": "zhouzhiwen <825142772@qq.com>",
     "private": true,
+    "config": {
+        "nuxt": {
+            "host": "0.0.0.0",
+            "port": "3333"
+        }
+    },
     "scripts": {
         "dev": "nuxt",
         "build": "nuxt build",
