--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
         }
     },
     "scripts": {
-        "dev": "nuxt",
-        "build": "nuxt build",
-        "start": "nuxt start",
-        "generate": "nuxt generate"
+        "dev": "cross-env NODE_ENV=dev nuxt",
+        "build-test": "cross-env NODE_ENV=test nuxt build",
+        "build-production": "cross-env NODE_ENV=production nuxt build",
+        "start-test": "cross-env NODE_ENV=test nuxt start",
+        "start-production": "cross-env NODE_ENV=production nuxt start",
+        "generate-test": "cross-env NODE_ENV=test nuxt generate",
+        "generate-production": "cross-env NODE_ENV=production nuxt generate"
     },
     "dependencies": {
         "axios": "^0.18.0",
+        "cross-env": "^5.2.0",
         "nuxt": "^1.0.0",
         "postcss-import": "^11.1.0",
         "postcss-loader": "^2.1.5",
